fix(detail): don't wrap comments count

--- a/src/_content-wrap.less
+++ b/src/_content-wrap.less
@@ -88,6 +88,10 @@
     :is(.left, .right) {
       align-items: flex-start;
     }
+    // comments
+    .left > a[target] {
+      white-space: nowrap;
+    }
     .right {
       flex-shrink: 0;
     }
